--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
     "axios-hooks": "^5.0.2",
     "next": "14.2.5",
