--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
     "axios-hooks": "^5.0.2",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
