--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.3",
     "axios-hooks": "^5.0.2",
     "clsx": "^2.1.1",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
