--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios-hooks": "^5.0.2",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
