--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
     "axios-hooks": "^5.0.2",
+    "axios-retry": "^4.5.0",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
