--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
+    "next-pwa": "^5.6.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18",
