--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
   "scope": "/",
   "start_url": "/",
   "icons": [
-    { "src": "/icons-192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "/icons-256.png", "type": "image/png", "sizes": "256x256" },
-    { "src": "/icons-512.png", "type": "image/png", "sizes": "512x512" }
+    { "src": "/icon-192.png", "type": "image/png", "sizes": "192x192" },
+    { "src": "/icon-256.png", "type": "image/png", "sizes": "256x256" },
+    { "src": "/icon-512.png", "type": "image/png", "sizes": "512x512" }
   ]
 }
